# 2024.1-No-Precinho

./: .codeclimate.yml  .gitignore  404.html  README.md  index.html
.github/: PULL_REQUEST_TEMPLATE.md  pr-title-checker-config.json
.github/workflows/: docs.yml  main.yml  pr-title-checker.yml
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: faccao.md  index.md  licoes-aprendidas.md  pds.md  referencias.md  seminario.md  visao-geral-produto.md  visao-geral-projeto.md  visao-geral.md
faccao/: index.html
licoes-aprendidas/: index.html
pds/: index.html
referencias/: index.html
search/: search_index.json
seminario/: index.html
visao-geral/: index.html
visao-geral-produto/: index.html
visao-geral-projeto/: index.html
