[tool.poetry]
name = "noprecinho-docs"
version = "0.1.0"
description = ""
authors = ["kyomi <me@kyomi.dev>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
